feat: add styles for invalid input

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -9,4 +9,12 @@
   &:focus {
     border-color: #56b280;
   }
+
+  &.invalid {
+    border-color: #ea5555;
+  }
+}
+
+.invalid {
+  color: #ea5555;
 }
