--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,4 +1,9 @@
+.input-wrapper {
+  width: 100%;
+}
+
 .input {
+  width: 100%;
   border: 1px solid #898989;
   border-radius: 4px;
   padding: 0.5em 1em;
