feat: submit form only if all inputs are valid

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -9,10 +9,16 @@
   font-weight: 500;
 
   @media (hover: hover) {
-    &:hover {
+    &:hover:enabled {
       opacity: 0.75;
       transform: scale(1.05);
     }
+  }
+
+  &:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+    background-color: #898989;
   }
 }
 
