feat: implement main page, header, footer (#15)

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,19 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: var(--main-bg-color);
+}
+
 ul {
   list-style: none;
 }
