--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --main-bg-color: #cfe6d2;
+  --main-icon-color: #66695c;
+  --main-links-color: rgba(247, 248, 250, 0.8);
+  --main-text-color: #66695c;
+  --main-container-color: #e5f5e6;
+}
+
 #root {
   width: 100%;
   max-width: 1280px;
