--- a/src/components/Modal/ModalConfirm.module.css
+++ b/src/components/Modal/ModalConfirm.module.css
@@ -1,4 +1,5 @@
 .modal {
+  --error-color: rgb(255, 51, 0);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,4 +8,9 @@
   border-radius: 4px;
   border: 1px solid #898989;
   background-color: #f9f9f9;
+
+  &.error {
+    border: 1px solid var(--error-color);
+    color: var(--error-color);
+  }
 }
