--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,6 +24,10 @@ header {
   @media (width <= 1000px) {
     height: 40%;
   }
+
+  @media (width <= 600px) {
+    height: 30%;
+  }
 }
 
 .icon {
@@ -68,5 +72,10 @@ header {
   @media (width <= 1000px) {
     font-size: 16px;
     margin: 10px;
+  }
+
+  @media (width <= 800px) {
+    font-size: 12px;
+    margin: 5px;
   }
 }
