--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -5,6 +5,16 @@
   font-weight: 500;
   font-style: normal;
   color: var(--main-text-color);
+
+  @media (width <= 550px) {
+    margin: 10px;
+    font-size: 16px;
+  }
+
+  @media (width <= 450px) {
+    margin: 10px;
+    font-size: 14px;
+  }
 }
 
 .center {
@@ -14,12 +24,18 @@
 .container {
   width: 100%;
   height: 600px;
+  padding: 10px;
   background-image: url('../../assets/descriptionImage.png');
   background-position: left;
   display: flex;
   align-items: center;
   justify-content: center;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+
+  @media (width <= 550px) {
+    width: 100%;
+    height: 450px;
+  }
 }
 
 .description {
@@ -30,6 +46,14 @@
   backdrop-filter: blur(24px);
   background: var(--main-links-color);
   border-radius: 10px;
+
+  @media (width <= 550px) {
+    height: 300px;
+  }
+
+  @media (width <= 450px) {
+    height: 350px;
+  }
 }
 
 .link {
@@ -46,5 +70,17 @@
 
   &:hover {
     transform: scale(1.05);
+  }
+
+  @media (width <= 650px) {
+    margin-top: 15px;
+    width: 200px;
+    height: 30px;
+  }
+
+  @media (width <= 550px) {
+    margin-top: 5px;
+    width: 150px;
+    height: 30px;
   }
 }
