--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -39,7 +39,15 @@ footer {
 }
 
 .text {
-  font-size: 20px;
+  font-size: 36px;
+
+  @media (width <= 1000px) {
+    font-size: 20px;
+  }
+
+  @media (width <= 600px) {
+    font-size: 16px;
+  }
 }
 
 .link {
