--- a/src/components/ProductOfTheMonth/ProductOfTheMonth.module.css
+++ b/src/components/ProductOfTheMonth/ProductOfTheMonth.module.css
@@ -42,7 +42,7 @@
   }
 
   @media (width <= 650px) {
-    height: 300px;
+    height: 330px;
   }
 
   @media (width <= 450px) {
@@ -52,6 +52,7 @@
 
 .wrapper {
   display: flex;
+  padding: 15px 0;
   align-items: center;
   justify-content: space-evenly;
 }
