--- a/src/components/ProductOfTheMonth/ProductOfTheMonth.module.css
+++ b/src/components/ProductOfTheMonth/ProductOfTheMonth.module.css
@@ -13,25 +13,48 @@
   @media (width <= 1000px) {
     font-size: 20px;
   }
+
+  @media (width <= 800px) {
+    font-size: 16px;
+  }
 }
 
 .header2 {
   font-size: 16px;
   @media (width <= 1000px) {
-    font-size: 12px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+  }
+}
+
+.container {
+  background-color: var(--main-container-color);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  width: 100%;
+  height: 600px;
+
+  @media (width <= 1000px) {
+    height: 450px;
+  }
+
+  @media (width <= 650px) {
+    height: 330px;
+  }
+
+  @media (width <= 450px) {
+    height: 350px;
   }
 }
 
 .wrapper {
-  background-color: var(--main-container-color);
-
-  margin-top: 20px;
-  width: 100%;
-  height: 600px;
   display: flex;
+  padding: 15px 0;
   align-items: center;
   justify-content: space-evenly;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .description {
@@ -54,4 +77,36 @@
     width: 200px;
     height: 300px;
   }
+
+  @media (width <= 650px) {
+    width: 100px;
+    height: 150px;
+  }
+}
+.link {
+  width: 200px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  height: 40px;
+  border-radius: 5px;
+  color: var(--main-links-color);
+  background-color: var(--main-icon-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+.center {
+  text-align: -webkit-center;
+}
+
+.text {
+  margin: 15px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
