--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -35,6 +35,7 @@ header {
   height: 35px;
   margin: 15px;
   color: var(--main-icon-color);
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.05);
