--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
   background-color: var(--main-bg-color);
 }
 
@@ -25,6 +26,9 @@ ul {
 
 button {
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .container {
