--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -30,32 +30,10 @@ header {
   }
 }
 
-.icon {
-  width: 35px;
-  height: 35px;
-  margin: 15px;
-  color: var(--main-icon-color);
-  cursor: pointer;
-
-  &:hover {
-    transform: scale(1.05);
-  }
-  @media (width <= 1000px) {
-    width: 20px;
-    height: 20px;
-    margin: 10px;
-  }
-  @media (width <= 600px) {
-    width: 15px;
-    height: 15px;
-    margin: 5px;
-  }
-}
-
 .header1 {
   font-size: 15px;
   margin: unset;
-  font-style: Roboto;
+  font-family: 'Roboto', sans-serif;
 }
 
 .text {
