--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,7 @@ button {
   max-width: 1200px;
   padding: 0 1em;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
