--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,7 +1,9 @@
 footer {
   height: 250px;
   padding: 10px;
-  position: sticky;
+  position: relative;
+  width: 100%;
+  bottom: 0;
   margin-top: 20px;
   text-align: -webkit-center;
   background-color: var(--main-bg-color);
