--- a/src/components/FormRegistration/FormRegistration.module.css
+++ b/src/components/FormRegistration/FormRegistration.module.css
@@ -43,7 +43,8 @@
   font-size: 20px;
 }
 
-.link, .text {
+.link,
+.text {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -64,7 +65,7 @@
 }
 
 .link:after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   right: 0;
@@ -76,7 +77,7 @@
 }
 
 .link:hover:after {
-  content: "";
+  content: '';
   width: 10%;
   display: block;
   position: absolute;
