--- a/src/components/FormRegistration/FormRegistration.module.css
+++ b/src/components/FormRegistration/FormRegistration.module.css
@@ -38,7 +38,7 @@
 }
 
 .navigate {
-  text-align: -webkit-center;
+  text-align: center;
   margin-top: 30px;
   font-size: 20px;
 }
@@ -72,7 +72,6 @@
   bottom: -3px;
   width: 0;
   height: 2px;
-  background-color: black;
   transition: width 0.5s;
 }
 
