--- a/src/components/FormLogin/FormLogin.module.css
+++ b/src/components/FormLogin/FormLogin.module.css
@@ -1,3 +1,8 @@
+.wrapper {
+  height: 55vh;
+  align-content: center;
+}
+
 .form-login {
   display: flex;
   flex-direction: column;
@@ -7,9 +12,8 @@
   padding: 1em;
   border: 2px solid #898989;
   border-radius: 4px;
-
   background-color: #f9f9f9;
-  box-shadow: -5px 5px 20px 8px #d7d7d7;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 
   & button {
     align-self: center;
@@ -18,4 +22,55 @@
 
 .heading {
   text-align: center;
+}
+
+.navigate {
+  position: relative;
+  text-align: center;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.link,
+.text {
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  margin-bottom: 5px;
+}
+
+.link {
+  font-size: 24px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: var(--main-text-color);
+
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
+.link:after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: -3px;
+  width: 0;
+  height: 2px;
+  transition: width 0.5s;
+}
+
+.link:hover:after {
+  content: '';
+  width: 10%;
+  display: block;
+  position: absolute;
+  left: 45%;
+  bottom: -3px;
+  height: 2px;
+  background-color: mintcream;
+  transition: width 0.5s;
 }
