--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,11 +1,11 @@
 footer {
-  height: 250px;
+  height: 200px;
   padding: 10px;
   position: relative;
   width: 100%;
   bottom: 0;
   margin-top: 20px;
-  text-align: -webkit-center;
+  text-align: center;
   background-color: var(--main-bg-color);
 }
 
