--- a/src/components/FormLogin/FormLogin.module.css
+++ b/src/components/FormLogin/FormLogin.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  height: 55vh;
   align-content: center;
 }
 
@@ -41,12 +40,16 @@
 }
 
 .link {
+  display: inline-block;
   font-size: 24px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-style: normal;
   color: var(--main-text-color);
-
+  .text {
+    font-size: inherit;
+    margin-bottom: 0.2rem;
+  }
   &:hover {
     transform: scale(1.05);
   }
@@ -55,22 +58,13 @@
 .link:after {
   content: '';
   display: block;
-  position: absolute;
-  right: 0;
-  bottom: -3px;
+  margin: 0 auto;
   width: 0;
   height: 2px;
+  background-color: mintcream;
   transition: width 0.5s;
 }
 
 .link:hover:after {
-  content: '';
-  width: 10%;
-  display: block;
-  position: absolute;
-  left: 45%;
-  bottom: -3px;
-  height: 2px;
-  background-color: mintcream;
-  transition: width 0.5s;
+  width: 100%;
 }
