--- a/src/components/FormRegistration/FormRegistration.module.css
+++ b/src/components/FormRegistration/FormRegistration.module.css
@@ -14,6 +14,10 @@
   & button {
     align-self: flex-end;
   }
+
+  label > input[type='checkbox'] {
+    margin-right: 0.4rem;
+  }
 }
 
 .input-group {
@@ -54,12 +58,16 @@
 }
 
 .link {
+  position: relative;
+  display: inline-block;
   font-size: 24px;
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-style: normal;
   color: var(--main-text-color);
-
+  .text {
+    font-size: inherit;
+  }
   &:hover {
     transform: scale(1.05);
   }
@@ -68,22 +76,14 @@
 .link:after {
   content: '';
   display: block;
-  position: absolute;
-  right: 0;
+  margin: 0 auto;
   bottom: -3px;
   width: 0;
   height: 2px;
+  background-color: mintcream;
   transition: width 0.5s;
 }
 
 .link:hover:after {
-  content: '';
-  width: 10%;
-  display: block;
-  position: absolute;
-  left: 45%;
-  bottom: -3px;
-  height: 2px;
-  background-color: mintcream;
-  transition: width 0.5s;
+  width: 100%;
 }
