--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -9,6 +9,8 @@
   font-weight: 500;
   font-style: normal;
   color: var(--main-icon-color);
+  display: flex;
+  justify-content: center;
 
   @media (width <= 1000px) {
     font-size: 24px;
@@ -27,7 +29,8 @@
 }
 
 .center {
-  text-align: -webkit-center;
+  display: flex;
+  justify-content: center;
 }
 
 .wrapper {
