--- a/src/pages/DetailedProduct/DetailedProduct.module.css
+++ b/src/pages/DetailedProduct/DetailedProduct.module.css
@@ -2,10 +2,14 @@
   display: flex;
   margin: 20px;
   justify-content: space-evenly;
+  background-color: var(--main-container-color);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  padding: 15px 0;
 }
 
 .description {
   width: 50%;
+  margin: 10px;
 }
 
 .image {
@@ -19,4 +23,97 @@
 .shipping {
   display: flex;
   justify-content: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-self: center;
+  margin: 10px;
+}
+
+.name,
+.price,
+.sale,
+.final-price,
+.product-description,
+.shipping,
+.text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+  margin: 10px;
+  @media (width <= 600px) {
+    margin: 5px;
+    font-weight: 400;
+  }
+}
+
+.name {
+  font-size: 46px;
+  margin-bottom: 50px;
+  color: var(--main-icon-color);
+  @media (width <= 600px) {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+}
+
+.price {
+  font-size: 24px;
+  text-decoration: line-through;
+  @media (width <= 600px) {
+    font-size: 14px;
+  }
+}
+
+.sale {
+  font-size: 24px;
+  color: red;
+  text-shadow: 0 0 20px rgba(28, 2, 2, 0.3);
+  @media (width <= 600px) {
+    font-size: 16px;
+  }
+}
+
+.final-price {
+  font-size: 26px;
+  @media (width <= 600px) {
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
+
+.product-description {
+  font-size: 24px;
+  color: var(--main-icon-color);
+  text-shadow: 0 0 20px rgba(28, 2, 2, 0.3);
+  margin-bottom: 50px;
+  @media (width <= 600px) {
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+}
+
+.shipping {
+  align-items: center;
+  font-size: 20px;
+  margin-top: 20px;
+  @media (width <= 600px) {
+    font-size: 14px;
+  }
+}
+
+.text {
+  font-size: 20px;
+  @media (width <= 600px) {
+    font-size: 14px;
+  }
+}
+
+.button {
+  margin-top: auto;
 }
