--- a/src/pages/UserProfile/UserProfile.module.css
+++ b/src/pages/UserProfile/UserProfile.module.css
@@ -2,3 +2,18 @@
   display: flex;
   gap: 1em;
 }
+
+.modal-password {
+  width: 100%;
+  max-width: 55svw;
+  background-color: whitesmoke;
+  padding: 1em;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 1em;
+}
