feat: add styles

--- a/src/pages/UserProfile/UserProfile.module.css
+++ b/src/pages/UserProfile/UserProfile.module.css
@@ -1,6 +1,13 @@
+.form {
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
 .input-group {
   display: flex;
   gap: 1em;
+  margin-top: 1em;
 }
 
 .modal-password {
