--- a/src/pages/DetailedProduct/DetailedProduct.module.css
+++ b/src/pages/DetailedProduct/DetailedProduct.module.css
@@ -117,3 +117,25 @@
 .button {
   margin-top: auto;
 }
+
+.modal {
+  height: auto;
+}
+
+.carousel {
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+
+  &:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0 20px rgb(255, 255, 255);
+  }
+}
+
+.modal-carousel {
+  height: 100%;
+
+  @media (width <= 1000px) {
+    height: 80%;
+  }
+}
