--- a/src/components/Products/Product.module.css
+++ b/src/components/Products/Product.module.css
@@ -13,7 +13,7 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 2px 2px 5px 0px rgba(0, 64, 128, 0.1);
-
+  transition: transform 0.5s;
   &:hover {
     transform: scale(1.05);
   }
