--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,7 +1,9 @@
 .catalog {
   margin-top: 20px;
 }
-
+.breadcrumbs {
+  margin-left: 1rem;
+}
 .catalog-header {
   margin: 15px;
   font-size: 36px;
