--- a/src/components/Products/Product.module.css
+++ b/src/components/Products/Product.module.css
@@ -6,23 +6,27 @@
   padding: 25px;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   text-align: center;
-  width: 250px;
-  height: 300px;
+  width: 280px;
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 2px 2px 5px 0px rgba(0, 64, 128, 0.1);
   transition: transform 0.5s;
   &:hover {
-    transform: scale(1.05);
+    box-shadow: 0px 0px 10px rgba(3, 95, 0, 0.493);
+    img {
+      transform: scale(1.03);
+    }
   }
 }
 
 .product-card__image {
   border-radius: 20px;
   width: 100%;
-  height: 80%;
+  aspect-ratio: 1;
+  transition: transform 0.5s;
 }
 
 .product-card__description,
