--- a/src/components/Price/Price.module.css
+++ b/src/components/Price/Price.module.css
@@ -1,24 +1,29 @@
-.price {
-  font-size: 24px;
-  text-decoration: line-through;
-  @media (width <= 600px) {
-    font-size: 14px;
-  }
-}
+.price-container {
+  font-size: inherit;
+  color: inherit;
 
-.sale {
-  font-size: 24px;
-  color: red;
-  text-shadow: 0 0 20px rgba(28, 2, 2, 0.3);
-  @media (width <= 600px) {
-    font-size: 16px;
+  .old-price {
+    font-size: 1.5em;
+    text-decoration: line-through;
+    @media (width <= 600px) {
+      font-size: 1em;
+    }
   }
-}
 
-.final-price {
-  font-size: 26px;
-  @media (width <= 600px) {
-    font-size: 20px;
-    font-weight: 500;
+  .sale {
+    font-size: 1.3em;
+    color: red;
+    text-shadow: 0 0 20px rgba(28, 2, 2, 0.3);
+    @media (width <= 600px) {
+      font-size: 0.9em;
+    }
+  }
+
+  .final-price {
+    font-size: 1.6em;
+    @media (width <= 600px) {
+      font-size: 1em;
+      font-weight: 500;
+    }
   }
 }
