--- a/src/components/Products/Product.module.css
+++ b/src/components/Products/Product.module.css
@@ -14,6 +14,8 @@
   overflow: hidden;
   box-shadow: 2px 2px 5px 0px rgba(0, 64, 128, 0.1);
   transition: transform 0.5s;
+  color: var(--main-text-color);
+  font-size: 1rem;
   &:hover {
     box-shadow: 0px 0px 10px rgba(3, 95, 0, 0.493);
     img {
@@ -33,8 +35,8 @@
 .product-card__price,
 .product-card__brand {
   margin: 0.2rem 0;
-  font-size: 1rem;
-  color: var(--main-text-color);
+  font-size: inherit;
+  color: inherit;
 }
 
 .product-card__brand {
