--- a/src/components/Price/Price.module.css
+++ b/src/components/Price/Price.module.css
@@ -1,9 +1,16 @@
 .price-container {
   font-size: inherit;
   color: inherit;
-
+  font-weight: 500;
+  * {
+    margin: 0.5em;
+    @media (width <= 600px) {
+      margin: 0.2em;
+      font-weight: 400;
+    }
+  }
   .old-price {
-    font-size: 1.5em;
+    font-size: 1.3em;
     text-decoration: line-through;
     @media (width <= 600px) {
       font-size: 1em;
