fix: UI in address modal

--- a/src/components/Modal/ModalAddress.module.css
+++ b/src/components/Modal/ModalAddress.module.css
@@ -27,3 +27,14 @@
   display: flex;
   flex-direction: column;
 }
+
+.radio-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3em;
+  margin: 0.5em 0 1em;
+
+  label {
+    cursor: pointer;
+  }
+}
