feat: add removing from basket icon

--- a/src/components/Quantity/Quantity.module.css
+++ b/src/components/Quantity/Quantity.module.css
@@ -7,6 +7,7 @@
     0 3px 6px rgba(0, 0, 0, 0.16),
     0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 3px;
+  width: fit-content;
 }
 
 .quantity-input__modifier {
