--- a/src/components/ProductInBasket/ProductInBusket.module.css
+++ b/src/components/ProductInBasket/ProductInBusket.module.css
@@ -1,15 +1,46 @@
 .product {
   display: flex;
-  width: 80%;
-  justify-content: space-around;
+  width: fit-content;
   background-color: var(--main-container-color);
   align-items: center;
-  padding: 10px 0;
+  padding: 10px;
   border-radius: 25px;
   margin-bottom: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+
+  @media (width <= 600px) {
+    flex-direction: column;
+    align-items: center;
+    flex: unset;
+    line-height: 35px;
+  }
 }
 
 .img {
-  height: 100px;
+  width: 150px;
+  height: 150px;
+
+  @media (width <= 400px) {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+.name {
+  width: 250px;
+}
+
+.price {
+  width: 110px;
+}
+
+.icon {
+  cursor: pointer;
 }
