feat: implement filtering products (#50)

--- a/src/components/Catalog/Filters/Filters.module.css
+++ b/src/components/Catalog/Filters/Filters.module.css
@@ -1,9 +1,25 @@
 .filters {
   margin: 1rem;
 }
-.input-price__label {
+.manual-input__label {
   width: 1.7rem;
 }
 .form-buttons {
   margin-top: 1rem;
+}
+
+.select-color {
+  min-width: 10rem;
+  max-width: 100%;
+}
+
+.applied-filters {
+  margin-left: 1rem;
+  font-weight: 500;
+  span {
+    font-weight: normal;
+    color: #69b1ff;
+    margin-left: 0.3rem;
+    margin-right: 0.1rem;
+  }
 }
