feat: implement searching products  (#53)
Fix some styles and refactor some code

--- a/src/components/Catalog/Searching/Searching.module.css
+++ b/src/components/Catalog/Searching/Searching.module.css
@@ -1,9 +1,8 @@
-.sorting {
+.searching {
   margin: 1rem;
   padding-left: 0.5rem;
   font-weight: 500;
 }
-
-.order-checked {
-  color: #031cf7;
+.search-input {
+  width: 15rem;
 }
