--- a/src/components/Modal/ModalAddress.module.css
+++ b/src/components/Modal/ModalAddress.module.css
@@ -1,10 +1,14 @@
 .modal {
   width: 100%;
-  max-width: 55svw;
   background-color: whitesmoke;
   padding: 1em;
   border-radius: 5px;
   border: 1px solid black;
+  margin: 0 1em;
+
+  @media (min-width: 768px) {
+    max-width: 55svw;
+  }
 }
 
 .fieldset {
