--- a/src/components/Modal/Overlay.module.css
+++ b/src/components/Modal/Overlay.module.css
@@ -6,8 +6,8 @@
   z-index: 99;
   top: 0;
   left: 0;
-  width: 100svw;
-  height: 100svh;
+  right: 0;
+  bottom: 0;
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(2px);
 }
