--- a/src/pages/Basket/Basket.module.css
+++ b/src/pages/Basket/Basket.module.css
@@ -9,6 +9,12 @@
   }
 }
 
+.actions {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
 .center {
   display: flex;
   justify-content: center;
@@ -25,6 +31,7 @@
   align-items: center;
   justify-content: center;
   margin: 20px 0;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.05);
