--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,11 +1,13 @@
 .heading {
   text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .school-link {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 1em;
+  display: block;
+  width: 200px;
+  height: 75px;
+  margin: 0 auto 2em;
   transition: transform 0.3s ease;
 
   @media (hover: hover) {
@@ -16,8 +18,6 @@
 }
 
 .logo {
-  width: 200px;
-  height: 150px;
   margin: 0 auto;
   transition: filter 0.3s ease;
 
