--- a/src/pages/Basket/Basket.module.css
+++ b/src/pages/Basket/Basket.module.css
@@ -13,6 +13,9 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  gap: 5px;
+  flex-wrap: wrap;
+  margin: 20px 0;
 }
 
 .center {
@@ -30,7 +33,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px 0;
   cursor: pointer;
 
   &:hover {
