--- a/src/components/ProductInBasket/ProductInBusket.module.css
+++ b/src/components/ProductInBasket/ProductInBusket.module.css
@@ -12,12 +12,9 @@
   * {
     gap: inherit;
   }
-  @media (width <= 540px) {
+  @media (width <= 400px) {
     flex-direction: column;
     gap: 0.5rem;
-    * {
-      line-height: 110%;
-    }
   }
 }
 
@@ -25,7 +22,7 @@
   display: flex;
   gap: 5px;
   align-items: center;
-  @media (width <= 540px) {
+  @media (width <= 550px) {
     flex-direction: column;
   }
 }
@@ -36,21 +33,17 @@
 
   @media (width <= 800px) {
     flex-direction: column;
-    align-items: center;
-    flex: unset;
-    line-height: 35px;
   }
 }
 
 .img {
   width: 150px;
-  height: 150px;
+  aspect-ratio: 1;
   border-radius: 15px;
 
-  /* @media (width <= 400px) {
-    width: 100px;
-    height: 100px;
-  } */
+  @media (width <= 550px) {
+    max-width: 100%;
+  }
 }
 
 .price {
