--- a/src/components/TeamMemberCard/TeamMemberCard.module.css
+++ b/src/components/TeamMemberCard/TeamMemberCard.module.css
@@ -13,6 +13,12 @@
   width: 170px;
   height: 170px;
   border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  &:hover {
+    transform: scale(1.5) rotate(-4deg);
+    box-shadow: var(--main-bg-color);
+  }
 }
 
 .header {
