--- a/src/pages/Basket/Basket.module.css
+++ b/src/pages/Basket/Basket.module.css
@@ -13,6 +13,9 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  gap: 5px;
+  flex-wrap: wrap;
+  margin: 20px 0;
 }
 
 .center {
@@ -30,7 +33,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px 0;
   cursor: pointer;
 
   &:hover {
@@ -39,8 +41,6 @@
 }
 
 .checkoutLink {
-  margin-left: 40px;
-
   & .link {
     margin: 0;
     background-color: var(--main-contrast-color);
@@ -64,11 +64,12 @@
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+  gap: 1rem;
 
   & .subTotalPriceContent {
     & .subTotalPrice {
       display: flex;
-      justify-content: flex-start;
+      justify-content: inherit;
       font-weight: bold;
 
       & p:first-child {
@@ -76,7 +77,7 @@
       }
 
       & .initialPrice {
-        text-decoration: line-through;
+        text-decoration: line-through 2px;
         text-decoration-color: #ea5555;
         margin-right: 10px;
       }
@@ -85,6 +86,10 @@
     & .subTotalWarning {
       color: var(--main-text-color);
     }
+  }
+  @media screen and (width <= 555px) {
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
 
