--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -2,7 +2,9 @@
   text-align: center;
   margin-bottom: 0.5em;
   color: var(--main-text-color);
-  transition: color 0.3s ease, background-color 0.3s ease;
+  transition:
+    color 0.3s ease,
+    background-color 0.3s ease;
 
   &:hover {
     transform: scale(1.05) rotate(-2deg);
@@ -54,5 +56,4 @@
   text-align: justify;
   text-indent: 2em;
   margin: 1em;
-
 }
