--- a/src/components/Button/ButtonCart.module.css
+++ b/src/components/Button/ButtonCart.module.css
@@ -1,41 +1,15 @@
-.button-cart {
-  color: var(--main-text-color);
-  padding: 15px 25px;
-  background-color: #c5e5d1;
-  background-image: radial-gradient(93% 87% at 87% 89%, rgba(0, 0, 0, 0.23) 0%, transparent 86.18%),
-    radial-gradient(
-      66% 66% at 26% 20%,
-      rgba(255, 255, 255, 0.55) 0%,
-      rgba(255, 255, 255, 0) 69.79%,
-      rgba(255, 255, 255, 0) 100%
-    );
-  box-shadow:
-    inset -3px -3px 9px rgba(255, 255, 255, 0.25),
-    inset 0px 3px 9px rgba(255, 255, 255, 0.3),
-    inset 0px 1px 1px rgba(255, 255, 255, 0.6),
-    inset 0px -8px 36px rgba(0, 0, 0, 0.3),
-    inset 0px 1px 5px rgba(255, 255, 255, 0.6),
-    2px 19px 31px rgba(0, 0, 0, 0.2);
-  border-radius: 14px;
+.button {
   font-weight: bold;
-  font-size: 16px;
-  border: 0;
-  user-select: none;
   touch-action: manipulation;
-  cursor: pointer;
-
-  &:hover {
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-    transform: translateY(-2px);
-  }
-
+  box-shadow: 2px 2px 7px grey;
+  transition: transform 0.3s;
+  transition: background-color 0.3s;
   &:active {
-    box-shadow: 0 2px white;
-    transform: translateY(4px);
+    box-shadow: none;
+    transform: translate(-1px, -1px);
   }
+}
 
-  @media (width <= 600px) {
-    font-size: 14px;
-    padding: 10px 15px;
-  }
+.in-cart-text {
+  margin-bottom: 0.5em;
 }
